Added google-site-verification meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Pixen - a pixel art editor for Mac OS X</title>
+	<meta name="google-site-verification" content="PtntQJXtz2TZCzqPEyJ2J6lvKE8uR4oFp2Jw4dDAoss" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
