Listed the grid as a feature

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 				</div>
 				
 				<div class="feature">
-					<h3>Crosshair</h3>
-					<p>Let the alignment crosshair help you place pixels just where you want them.</p>
+					<h3>Grid + Alignment Crosshair</h3>
+					<p>Let the grid and the alignment crosshair help you place pixels just where you want them.</p>
 				</div>
 				
 				<div class="feature">
