--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				
 				<div class="feature">
 					<h3>Backgrounds</h3>
-					<p>Pick a custom background - flat, striped, checkered, or a specified image - to be drawn beneath the canvas.</p>
+					<p>Pick a flat, striped or checkered background (or even a custom image) to be drawn beneath the canvas.</p>
 				</div>
 			</div>
 			
