More rewording, part 2

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="column">
 				<div class="feature">
 					<h3>Tile View</h3>
-					<p>Preview and work with pixel art as it is tiled across the window.</p>
+					<p>Preview and edit images as they are tiled across the window.</p>
 				</div>
 				
 				<div class="feature">
