Use a local copy of jquery

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="google-site-verification" content="PtntQJXtz2TZCzqPEyJ2J6lvKE8uR4oFp2Jw4dDAoss" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
 	
