--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</div>
 				
 				<div class="feature">
-					<h3>Backgrounds</h3>
+					<h3>Custom Backgrounds</h3>
 					<p>Pick a flat, striped or checkered background (or even a custom image) to be drawn beneath the canvas.</p>
 				</div>
 				
