--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				
 				<p>Pixen is a free, open source pixel art editor for Mac OS X. With features like a unique color palette system, patterns, layers, and high-zoom support, Pixen includes all the tools you need to create pixel art on your Mac. Pixen also makes creating frame-by-frame animations fun and easy.</p>
 				
-				<a href="http://itunes.com/mac/Pixen"><img src="images/download.png" width="251" height="30" /></a>
+				<a href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12"><img src="images/download.png" width="251" height="30" /></a>
 				<a href="https://github.com/Pixen/Pixen/issues"><img src="images/issues.png" width="125" height="30" /></a>
 				<a href="https://twitter.com/#!/pixenapp"><img src="images/Twitter.png" width="170" height="30" /></a>
 			</div>
