--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<h1>Pixen</h1>
 				<h2>pixel art editor for Mac OS X</h2>
 				
-				<p>Pixen is a free, open source pixel art editor for Mac OS X. With features like a unique color palette system, patterns, layers, and high-zoom support, Pixen includes all the tools you need to create pixel art on your Mac. Pixen also makes creating frame-by-frame animations fun and easy.</p>
+				<p>Pixen is a free, open source pixel art editor tailored for the creation of low-resolution raster graphics, such as those 8-bit sprites found in old-school video games. With innovative features like a unique color palette system, patterns, layers, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
 				
 				<a href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12"><img src="images/download.png" width="251" height="30" /></a>
 				<a href="https://github.com/Pixen/Pixen/issues"><img src="images/issues.png" width="125" height="30" /></a>
