--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 				
 				<p>Pixen is a free, open source pixel art editor designed for working with low-resolution raster art, such as those 8-bit sprites found in old-school video games. With innovative features like a unique color palette system, patterns, layers, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
 				
-				<a href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12"><img src="images/download.png" width="251" height="30" /></a>
-				<a href="https://github.com/Pixen/Pixen/issues"><img src="images/issues.png" width="125" height="30" /></a>
-				<a href="https://twitter.com/#!/pixenapp"><img src="images/Twitter.png" width="170" height="30" /></a>
+				<a class="btn" href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12">Download in the Mac App Store</a>
+				<a class="btn" href="https://github.com/Pixen/Pixen/issues">Report Issues</a>
+				<a class="btn" href="https://twitter.com/#!/pixenapp">Follow us on Twitter</a>
 			</div>
 			
 			<div class="clearFix"></div>
