--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div id="container">
 		<div id="main">
 			<div class="left">
-				<img id="icon" width="128" height="128" alt="Pixen icon" />
+				<img id="icon" src="images/icon.png" width="128" height="128" alt="Pixen icon" />
 			</div>
 			
 			<div class="right">
