--- a/support.html
+++ b/support.html
@@ -15,8 +15,8 @@
 			<div class="right">
 				<h1>Pixen</h1>
 				<h2>Support</h2>
-
-				<p>Feel free to use the features below to discuss Pixen with fellow users. You may also report bugs and feature requests on our <a href="http://github.com/Pixen/Pixen/issues">issue tracker</a> on GitHub.</p>
+				
+				<p>Feel free to use the features below to discuss Pixen with developers and fellow users. You may also report bugs and feature requests on our <a href="http://github.com/Pixen/Pixen/issues">issue tracker</a> on GitHub.</p>
 			</div>
 
 			<div class="clearFix"></div>
