--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<h1>Pixen</h1>
 				<h2>pixel art editor for Mac OS X</h2>
 				
-				<p>Pixen is a free, open source pixel art editor designed for working with low-resolution raster art, such as those 8-bit sprites found in old-school video games. With innovative features like a unique color palette system, patterns, layers, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
+				<p>Pixen is an open source pixel art editor designed for working with low-resolution raster art, such as those 8-bit sprites found in old-school video games. With innovative features like a unique color palette system, patterns, layers, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
 				
 				<a class="btn" href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12">Download in the Mac App Store</a>
 				<a class="btn" href="https://twitter.com/#!/pixenapp">Follow us on Twitter</a>
