--- a/support.html
+++ b/support.html
@@ -16,7 +16,7 @@
 				<h1>Pixen</h1>
 				<h2>Support</h2>
 
-				<p>Use the features below to discuss Pixen with developers and fellow users. You may report bugs and submit feature requests on our GitHub <a href="http://github.com/Pixen/Pixen/issues">issue tracker</a>. We're also on Twitter <a href="https://twitter.com/pixenapp">@pixenapp</a>.</p>
+				<p>Use the features below to discuss Pixen with developers and fellow users. You may report bugs and submit feature requests on our GitHub <a href="https://github.com/Pixen/Pixen/issues">issue tracker</a>. We're also on Twitter <a href="https://twitter.com/pixenapp">@pixenapp</a>.</p>
 			</div>
 
 			<div class="clearFix"></div>
