--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<a class="btn green" href="https://github.com/downloads/Pixen/Pixen/Pixen_3_5_6b1.zip">Free Download</a>
 				<a class="btn green" href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12">Purchase in the Mac App Store</a>
 				<a class="btn" href="https://twitter.com/#!/pixenapp">Follow us on Twitter</a>
-				<a class="btn" href="support.html">Support</a>
+				<a class="btn" href="http://pixen.uservoice.com">Support</a>
 			</div>
 			
 			<div class="clearFix"></div>
