--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 			<h3>Screenshots</h3>
 			
 			<a href="screenshots/1.png" class="fancybox" title="Pixen"><img src="screenshots/1_thumb.png" /></a>
+			<a href="screenshots/2.png" class="fancybox" title="Pixen"><img src="screenshots/2_thumb.png" /></a>
 		</div>
 	</div>
 </body>
