--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				
 				<div class="feature">
 					<h3>Color Palettes</h3>
-					<p>Add and organize commonly-used colors into palettes.</p>
+					<p style="margin-bottom:0">Add and organize commonly-used colors into palettes.</p>
 				</div>
 			</div>
 			
