updated download link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				
 				<p><em>NOTE: Pixen is now a paid app in the Mac App Store. Please consider purchasing it if you would like to support future development.</em></p>
 				
-				<a class="btn yellow" href="https://github.com/downloads/Pixen/Pixen/Pixen_3.5.7b1.zip">Free Download (beta)</a>
+				<a class="btn yellow" href="https://github.com/downloads/Pixen/Pixen/Pixen_3_5_7b2.zip">Free Download (beta)</a>
 				<a class="btn green" href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12">Purchase in the Mac App Store</a>
 				<a class="btn" href="https://twitter.com/#!/pixenapp">Follow on Twitter</a>
 				<a class="btn" href="http://pixen.uservoice.com/forums/171709-general">Support</a>
