--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
 			<div class="clearFix"></div>
 		</div>
 	</div>
+	
+	<div class="footer">
+		<p>maintained by <a href="http://mattrajca.com">Matt Rajca</a></p>
+	</div>
 </body>
 </html>
 
