--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	</div>
 	
 	<div class="footer">
-		<p>maintained by <a href="http://mattrajca.com">Matt Rajca</a></p>
+		<p>&copy; 2012. Maintained by <a href="http://mattrajca.com">Matt Rajca</a>.</p>
 	</div>
 </body>
 </html>
