experimenting with fonts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
 	
+	<script type="text/javascript" src="//use.typekit.net/vax8fvk.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	
 	<script>
 		$(document).ready(function() {
 			$('.fancybox').fancybox();
@@ -17,7 +20,7 @@
 </head>
 
 <body>
-	<div id="container">
+	<div id="container" class="museo">
 		<div id="main">
 			<div class="left">
 				<img id="icon" src="images/icon.png" width="128" height="128" alt="Pixen icon" />
