--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 </head>
 
 <body>
-	<div id="container" class="museo">
+	<div id="container" class="cal">
 		<div id="main">
 			<div class="left">
 				<img id="icon" src="images/icon.png" width="128" height="128" alt="Pixen icon" />
 			</div>
 			
 			<div class="right">
-				<h1>Pixen</h1>
-				<h2>pixel art editor for Mac OS X</h2>
+				<h1 class="museo">Pixen</h1>
+				<h2 class="museo">pixel art editor for Mac OS X</h2>
 				
 				<p>Pixen is an open source pixel art editor designed for working with low-resolution raster art, such as those 8-bit sprites found in old-school video games. With innovative features like a unique color palette system, patterns, layers, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
 				
