experimenting with fonts

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	</script>
 </head>
 
-<body>
-	<div id="container" class="cal">
+<body class="cal">
+	<div id="container">
 		<div id="main">
 			<div class="left">
 				<img id="icon" src="images/icon.png" width="128" height="128" alt="Pixen icon" />
