--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 				<h1 class="museo">Pixen</h1>
 				<h2 class="museo">pixel art editor for Mac OS X</h2>
 				
-				<p>Pixen is an open source pixel art editor designed for working with low-resolution raster art, such as those 8-bit sprites found in old-school video games. With innovative features like a unique color palette system, patterns, layers, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
+				<p>Pixen is a pixel art editor designed for working with low-resolution raster art, such as those 8-bit sprites found in old-school video games. With innovative features like a color palette system, patterns, and high-zoom support, Pixen packs all the tools pixel artists need in an intuitive, Mac-native interface. Pixen also makes creating frame-by-frame animations fun and easy.</p>
 				
-				<a class="btn yellow" href="http://mattrajca.com/assets/files/Pixen_3_5_10b1.zip">Free Download (beta)</a>
 				<a class="btn green" href="http://itunes.apple.com/us/app/pixen/id525180431?mt=12">Purchase in the Mac App Store</a>
 				<a class="btn" href="https://twitter.com/#!/pixenapp">Follow on Twitter</a>
 				<a class="btn" href="http://pixen.uservoice.com/forums/171709-general">Support</a>
